# RustCode

./: .gitignore  Cargo.toml  README.md  flake.nix  grammars.nix  languages.toml
book/: book.toml
book/src/: SUMMARY.md  building-from-source.md  configuration.md  editor.md  from-vim.md  install.md  keymap.md  lang-support.md  languages.md  package-managers.md  registers.md  remapping.md  surround.md  textobjects.md  themes.md  title-page.md  usage.md
book/src/guides/: adding_languages.md  indent.md  injection.md  textobject.md
contrib/: rustcode.appdata.xml  rustcode.desktop
contrib/completion/: hx.bash  hx.elv  hx.fish  hx.zsh
docs/: CONTRIBUTING.md  architecture.md  releases.md  vision.md
runtime/: tutor
runtime/queries/ada/: textobjects.scm
runtime/queries/elixir/: highlights.scm
runtime/queries/koka/: highlights.scm
runtime/queries/meson/: indents.scm
runtime/queries/nix/: injections.scm
runtime/queries/ohm/: highlights.scm  indents.scm  injections.scm  textobjects.scm
runtime/queries/ponylang/: indents.scm  textobjects.scm
runtime/queries/purescript/: highlights.scm
runtime/queries/tact/: highlights.scm  injections.scm
runtime/queries/yaml/: injections.scm
runtime/themes/: README.md  autumn.toml  autumn_night.toml  darcula-solid.toml  material_darker.toml  material_deep_ocean.toml  material_oceanic.toml  material_palenight.toml  monokai_soda.toml  noctis.toml  nord.toml  pop-dark.toml  rose_pine.toml  rose_pine_dawn.toml  rose_pine_moon.toml  yellowed.toml
rustcode-core/: Cargo.toml
rustcode-core/src/: comment.rs  config.rs  diagnostic.rs  history.rs  indent.rs  lib.rs  line_ending.rs  match_brackets.rs  selection.rs  shellwords.rs  syntax.rs  test.rs  text_annotations.rs
rustcode-core/tests/: indent.rs
rustcode-dap/: Cargo.toml
rustcode-dap/src/: client.rs  lib.rs
rustcode-event/: Cargo.toml
rustcode-event/src/: lib.rs  runtime.rs
rustcode-loader/: Cargo.toml
rustcode-loader/src/: config.rs  grammar.rs  lib.rs  main.rs
rustcode-lsp/: Cargo.toml
rustcode-lsp/src/: client.rs  jsonrpc.rs  lib.rs  snippet.rs
rustcode-parsec/: Cargo.toml
rustcode-parsec/src/: lib.rs
rustcode-stdx/: Cargo.toml
rustcode-stdx/src/: path.rs  rope.rs
rustcode-stdx/tests/: path.rs
rustcode-term/: Cargo.toml  build.rs
rustcode-term/src/: application.rs  args.rs  commands.rs  compositor.rs  config.rs  events.rs  handlers.rs  health.rs  job.rs  keymap.rs  lib.rs  main.rs
rustcode-term/src/commands/: dap.rs  lsp.rs  typed.rs
rustcode-term/src/handlers/: completion.rs  signature_help.rs
rustcode-term/src/handlers/completion/: resolve.rs
rustcode-term/src/keymap/: default.rs  macros.rs
rustcode-term/src/ui/: completion.rs  document.rs  editor.rs  info.rs  lsp.rs  markdown.rs  menu.rs  mod.rs  overlay.rs  picker.rs  popup.rs  prompt.rs  spinner.rs  statusline.rs  text.rs
rustcode-term/tests/: integration.rs
rustcode-term/tests/test/: auto_pairs.rs  commands.rs  helpers.rs  movement.rs  splits.rs
rustcode-term/tests/test/commands/: write.rs
rustcode-tui/: Cargo.toml  README.md
rustcode-tui/src/: buffer.rs  layout.rs  lib.rs  terminal.rs  text.rs
rustcode-tui/src/backend/: crossterm.rs  mod.rs  test.rs
rustcode-tui/src/widgets/: block.rs  list.rs  mod.rs  paragraph.rs  reflow.rs  table.rs
rustcode-tui/tests/: terminal.rs  widgets_block.rs  widgets_list.rs  widgets_paragraph.rs  widgets_table.rs
rustcode-vcs/: Cargo.toml
rustcode-vcs/src/: diff.rs
rustcode-vcs/src/diff/: line_cache.rs  worker.rs
rustcode-vcs/src/diff/worker/: test.rs
rustcode-vcs/src/git/: test.rs
rustcode-view/: Cargo.toml
rustcode-view/src/: clipboard.rs  document.rs  editor.rs  events.rs  graphics.rs  gutter.rs  handlers.rs  info.rs  input.rs  lib.rs  register.rs  theme.rs  view.rs
rustcode-view/src/handlers/: dap.rs  lsp.rs
xtask/: Cargo.toml
xtask/src/: docgen.rs  helpers.rs  querycheck.rs
