[workspace]
resolver = "2"
members = [
  "rustcode-core",
  "rustcode-view",
  "rustcode-term",
  "rustcode-tui",
  "rustcode-lsp",
  "rustcode-event",
  "rustcode-dap",
  "rustcode-loader",
  "rustcode-vcs",
  "rustcode-parsec",
  "rustcode-stdx",
  "xtask",
]

default-members = [
  "rustcode-term"
]

[profile.release]
lto = "thin"
# debug = true

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
# strip = "debuginfo" # TODO: or strip = true
opt-level = 3

[profile.integration]
inherits = "test"
package.rustcode-core.opt-level = 2
package.rustcode-tui.opt-level = 2
package.rustcode-term.opt-level = 2

[workspace.dependencies]
tree-sitter = { version = "0.22" }
nucleo = "0.2.0"
slotmap = "1.0.7"

[workspace.package]
version = "24.3.0"
edition = "2021"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
categories = ["editor"]
repository = "https://github.com/rustcode-editor/rustcode"
homepage = "https://rustcode-editor.com"
license = "MPL-2.0"
rust-version = "1.70"
